--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -41,6 +41,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          generate_release_notes: true
           files: ./dist/*
           body: Please refer to [CHANGELOG.md](https://github.com/mouday/stock-open-api/blob/master/CHANGELOG.md) for details.
           # note you'll typically need to create a personal access token
