完善 测试和发布

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,4 +49,4 @@ jobs:
         run: python setup.py install
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run tests
-        run:  pytest
+        run:  pytest tests/test_index.py
