--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,6 +21,13 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/domain-admin
+
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
 
     steps:
       - name: Checkout
@@ -44,4 +51,9 @@ jobs:
         run: |
             python setup.py sdist bdist_wheel --python-tag py2.py3
             twine check dist/*
-            twine upload dist/*
+
+      # Publishing with a Trusted Publisher
+      # https://docs.pypi.org/trusted-publishers/using-a-publisher/
+      # https://github.com/pypa/gh-action-pypi-publish/
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
